align-items: center alignment correction

--- a/brmapp/static/style.css
+++ b/brmapp/static/style.css
@@ -121,6 +121,7 @@ label{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
 }
 @media(max-width:576px){
     .input.box.input.field{
